{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 253,
  "lineage": "654a6cf3-864d-aa93-11df-9d4121807c62",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757370076418:security-group/sg-020b3961d94dad6e5",
            "description": "Allow EKS nodes to access RDS databases",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020b3961d94dad6e5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow EKS nodes to access PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5432
              }
            ],
            "name": "final-project-devops-eks-to-rds",
            "name_prefix": "",
            "owner_id": "757370076418",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "final-project-devops-eks-to-rds",
              "Project": "final-project-devops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "final-project-devops-eks-to-rds",
              "Project": "final-project-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e694f073f2215ebc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_nodes_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS nodes to access PostgreSQL",
            "from_port": 5432,
            "id": "sgrule-2438193872",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-020b3961d94dad6e5",
            "security_group_rule_id": "sgr-00b9817a1eeb0e9b5",
            "self": false,
            "source_security_group_id": "sg-020b3961d94dad6e5",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_to_rds",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.argo_cd",
      "mode": "data",
      "type": "kubernetes_service",
      "name": "argocd_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd/argocd-server",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "argocd",
                  "meta.helm.sh/release-namespace": "argocd"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "server",
                  "app.kubernetes.io/instance": "argocd",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "argocd-server",
                  "app.kubernetes.io/part-of": "argocd",
                  "app.kubernetes.io/version": "v2.8.4",
                  "helm.sh/chart": "argo-cd-5.51.6"
                },
                "name": "argocd-server",
                "namespace": "argocd",
                "resource_version": "1167",
                "uid": "84400b52-fd37-45ac-84c5-6fda20879092"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.72.63",
                "cluster_ips": [
                  "172.20.72.63"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 30413,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  },
                  {
                    "name": "https",
                    "node_port": 30250,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/instance": "argocd",
                  "app.kubernetes.io/name": "argocd-server"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a84400b52fd3745ac84c56fda2087909-1643917824.us-west-2.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.argo_cd",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "name": "argocd",
                "resource_version": "840",
                "uid": "b2ce29d5-49bf-488b-80af-d614443b19ab"
              }
            ],
            "timeouts": {
              "delete": "30m"
            },
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "argocd"
          },
          "dependencies": [
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.argo_cd",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "django_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "django-app",
            "metadata": [
              {
                "generation": 0,
                "name": "django-app",
                "resource_version": "839",
                "uid": "079a675e-b965-48d7-810b-6484e03f321b"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "django-app"
          },
          "dependencies": [
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "data",
      "type": "kubernetes_service",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins/jenkins",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "jenkins",
                  "meta.helm.sh/release-namespace": "jenkins"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "jenkins-controller",
                  "app.kubernetes.io/instance": "jenkins",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "jenkins",
                  "helm.sh/chart": "jenkins-4.8.3"
                },
                "name": "jenkins",
                "namespace": "jenkins",
                "resource_version": "18114",
                "uid": "bb149172-4f5a-445a-9ee8-3a598e92e55a"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.227.206",
                "cluster_ips": [
                  "172.20.227.206"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "load_balancer_source_ranges": [
                  "0.0.0.0/0"
                ],
                "port": [
                  {
                    "name": "http",
                    "node_port": 30552,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/component": "jenkins-controller",
                  "app.kubernetes.io/instance": "jenkins"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "abb1491724f5a445a9ee83a598e92e55-421803409.us-west-2.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins",
            "metadata": [
              {
                "generation": 0,
                "name": "jenkins",
                "resource_version": "13159",
                "uid": "0d22e0c6-d19e-4b12-882e-6d707f719d47"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "jenkins"
          },
          "dependencies": [
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.ebs_csi_driver",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_node_group.main",
            "module.eks.aws_iam_openid_connect_provider.eks",
            "module.eks.aws_iam_role.ebs_csi_driver_role",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role.eks_node_group_role",
            "module.eks.aws_iam_role_policy_attachment.ebs_csi_driver_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_cni_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_container_registry_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.eks.aws_iam_role_policy_attachment.node_group_ebs_policy",
            "module.eks.aws_iam_role_policy_attachment.node_group_ec2_policy",
            "module.eks.data.tls_certificate.eks",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "null_resource.apply_kubernetes_secrets",
            "null_resource.update_kubeconfig"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring",
      "mode": "data",
      "type": "kubernetes_service",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring/grafana",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "grafana",
                  "meta.helm.sh/release-namespace": "monitoring"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/instance": "grafana",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "grafana",
                  "app.kubernetes.io/version": "10.2.2",
                  "helm.sh/chart": "grafana-7.0.19"
                },
                "name": "grafana",
                "namespace": "monitoring",
                "resource_version": "2436",
                "uid": "024d50c1-2909-4307-8a7a-437f6b2d8ec7"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.31.14",
                "cluster_ips": [
                  "172.20.31.14"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "service",
                    "node_port": 30888,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/instance": "grafana",
                  "app.kubernetes.io/name": "grafana"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a024d50c1290943078a7a437f6b2d8ec-517463189.us-west-2.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.monitoring",
      "mode": "data",
      "type": "kubernetes_service",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring/prometheus-server",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "prometheus",
                  "meta.helm.sh/release-namespace": "monitoring"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "server",
                  "app.kubernetes.io/instance": "prometheus",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "prometheus",
                  "app.kubernetes.io/part-of": "prometheus",
                  "app.kubernetes.io/version": "v2.48.0",
                  "helm.sh/chart": "prometheus-25.8.0"
                },
                "name": "prometheus-server",
                "namespace": "monitoring",
                "resource_version": "2083",
                "uid": "663bd50d-0cdf-42e5-8f00-a6f8c2a50f1b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.145.65",
                "cluster_ips": [
                  "172.20.145.65"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 30205,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "9090"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/component": "server",
                  "app.kubernetes.io/instance": "prometheus",
                  "app.kubernetes.io/name": "prometheus"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a663bd50d0cdf42e58f00a6f8c2a50f1-1225129890.us-west-2.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.monitoring",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "monitoring",
                "resource_version": "1900",
                "uid": "8676f882-7d52-41f6-8a28-9e9fe868a656"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "monitoring"
          },
          "dependencies": [
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.ebs_csi_driver",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_node_group.main",
            "module.eks.aws_iam_openid_connect_provider.eks",
            "module.eks.aws_iam_role.ebs_csi_driver_role",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role.eks_node_group_role",
            "module.eks.aws_iam_role_policy_attachment.ebs_csi_driver_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_cni_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_container_registry_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.eks.aws_iam_role_policy_attachment.node_group_ebs_policy",
            "module.eks.aws_iam_role_policy_attachment.node_group_ec2_policy",
            "module.eks.data.tls_certificate.eks",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds_postgres",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757370076418:security-group/sg-09c776e1c4918c9d8",
            "description": "Security group for RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c776e1c4918c9d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.4.0/24",
                  "10.0.5.0/24",
                  "10.0.6.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "final-project-devops-dev-db-sg",
            "name_prefix": "",
            "owner_id": "757370076418",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Module": "rds",
              "Name": "final-project-devops-dev-db-sg",
              "Project": "final-project-devops",
              "Purpose": "django-database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Module": "rds",
              "Name": "final-project-devops-dev-db-sg",
              "Project": "final-project-devops",
              "Purpose": "django-database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e694f073f2215ebc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02525613443ae68c8",
            "arn": "arn:aws:ec2:us-west-2:757370076418:elastic-ip/eipalloc-02525613443ae68c8",
            "association_id": "eipassoc-00afe1968bbeea0cc",
            "domain": "vpc",
            "id": "eipalloc-02525613443ae68c8",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0442e70232d7a01a6",
            "private_dns": "ip-10-0-1-125.us-west-2.compute.internal",
            "private_ip": "10.0.1.125",
            "public_dns": "ec2-44-228-226-98.us-west-2.compute.amazonaws.com",
            "public_ip": "44.228.226.98",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-eip-1"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a47e133daaac9c53",
            "arn": "arn:aws:ec2:us-west-2:757370076418:elastic-ip/eipalloc-0a47e133daaac9c53",
            "association_id": "eipassoc-05f55e81568205904",
            "domain": "vpc",
            "id": "eipalloc-0a47e133daaac9c53",
            "network_border_group": "us-west-2",
            "network_interface": "eni-046f5ec8030fef268",
            "private_dns": "ip-10-0-2-185.us-west-2.compute.internal",
            "private_ip": "10.0.2.185",
            "public_dns": "ec2-52-10-198-77.us-west-2.compute.amazonaws.com",
            "public_ip": "52.10.198.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-eip-2"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005778037cc22aaf0",
            "arn": "arn:aws:ec2:us-west-2:757370076418:elastic-ip/eipalloc-005778037cc22aaf0",
            "association_id": "eipassoc-0863f33af9f065a5e",
            "domain": "vpc",
            "id": "eipalloc-005778037cc22aaf0",
            "network_border_group": "us-west-2",
            "network_interface": "eni-09da8445948b0233b",
            "private_dns": "ip-10-0-3-216.us-west-2.compute.internal",
            "private_ip": "10.0.3.216",
            "public_dns": "ec2-52-35-115-53.us-west-2.compute.amazonaws.com",
            "public_ip": "52.35.115.53",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-eip-3"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-eip-3"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757370076418:internet-gateway/igw-08d16033160ab06dc",
            "id": "igw-08d16033160ab06dc",
            "owner_id": "757370076418",
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-igw"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-igw"
            },
            "vpc_id": "vpc-0e694f073f2215ebc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02525613443ae68c8",
            "association_id": "eipassoc-00afe1968bbeea0cc",
            "connectivity_type": "public",
            "id": "nat-0e6fb7c14645635b8",
            "network_interface_id": "eni-0442e70232d7a01a6",
            "private_ip": "10.0.1.125",
            "public_ip": "44.228.226.98",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e7b3cc6b88e7be87",
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-nat-1"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a47e133daaac9c53",
            "association_id": "eipassoc-05f55e81568205904",
            "connectivity_type": "public",
            "id": "nat-004e701b90a943b9a",
            "network_interface_id": "eni-046f5ec8030fef268",
            "private_ip": "10.0.2.185",
            "public_ip": "52.10.198.77",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0856382ffc6561b49",
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-nat-2"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005778037cc22aaf0",
            "association_id": "eipassoc-0863f33af9f065a5e",
            "connectivity_type": "public",
            "id": "nat-0e09a87a7eb0d9c2e",
            "network_interface_id": "eni-09da8445948b0233b",
            "private_ip": "10.0.3.216",
            "public_ip": "52.35.115.53",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a85ce7dce67dc74f",
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-nat-3"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-nat-3"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757370076418:route-table/rtb-00149a4be03ad0843",
            "id": "rtb-00149a4be03ad0843",
            "owner_id": "757370076418",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e6fb7c14645635b8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-private-rt-1"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e694f073f2215ebc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757370076418:route-table/rtb-019269f3f304ecead",
            "id": "rtb-019269f3f304ecead",
            "owner_id": "757370076418",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-004e701b90a943b9a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-private-rt-2"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e694f073f2215ebc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757370076418:route-table/rtb-04cf3958930b09f02",
            "id": "rtb-04cf3958930b09f02",
            "owner_id": "757370076418",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e09a87a7eb0d9c2e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-private-rt-3"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-private-rt-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e694f073f2215ebc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757370076418:route-table/rtb-073766fa29442e414",
            "id": "rtb-073766fa29442e414",
            "owner_id": "757370076418",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d16033160ab06dc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-public-rt"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e694f073f2215ebc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f7c17f20d974fbd",
            "route_table_id": "rtb-00149a4be03ad0843",
            "subnet_id": "subnet-054c0bfa79af56ee5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0585bf4425572152b",
            "route_table_id": "rtb-019269f3f304ecead",
            "subnet_id": "subnet-09b230a11040302b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b76d971b9adf84b",
            "route_table_id": "rtb-04cf3958930b09f02",
            "subnet_id": "subnet-02d62282a748dfa88"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05316d8aae610aa5e",
            "route_table_id": "rtb-073766fa29442e414",
            "subnet_id": "subnet-0e7b3cc6b88e7be87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031bfbe9b61316104",
            "route_table_id": "rtb-073766fa29442e414",
            "subnet_id": "subnet-0856382ffc6561b49"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031dc5711d71ed90f",
            "route_table_id": "rtb-073766fa29442e414",
            "subnet_id": "subnet-0a85ce7dce67dc74f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757370076418:subnet/subnet-054c0bfa79af56ee5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054c0bfa79af56ee5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757370076418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-private-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-private-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-0e694f073f2215ebc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757370076418:subnet/subnet-09b230a11040302b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b230a11040302b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757370076418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-private-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-private-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-0e694f073f2215ebc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757370076418:subnet/subnet-02d62282a748dfa88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d62282a748dfa88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757370076418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-private-3",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-private-3",
              "Type": "Private"
            },
            "vpc_id": "vpc-0e694f073f2215ebc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757370076418:subnet/subnet-0e7b3cc6b88e7be87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7b3cc6b88e7be87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "757370076418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-public-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-public-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-0e694f073f2215ebc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757370076418:subnet/subnet-0856382ffc6561b49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0856382ffc6561b49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "757370076418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-public-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-public-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-0e694f073f2215ebc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757370076418:subnet/subnet-0a85ce7dce67dc74f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a85ce7dce67dc74f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "757370076418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-public-3",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc-public-3",
              "Type": "Public"
            },
            "vpc_id": "vpc-0e694f073f2215ebc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757370076418:vpc/vpc-0e694f073f2215ebc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0545d240b64772b85",
            "default_route_table_id": "rtb-06d5cdd6464d5c5c6",
            "default_security_group_id": "sg-00ccb3f92ad235b66",
            "dhcp_options_id": "dopt-0512eb17b1c07bf29",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e694f073f2215ebc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d5cdd6464d5c5c6",
            "owner_id": "757370076418",
            "tags": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc"
            },
            "tags_all": {
              "Environment": "final-project-devops",
              "Name": "final-project-devops-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}